tests/dummy/bad/templates/composite-invalid-yaml-template.yaml.j2
foo: 1
bar: 2
buz: 3
---
foo: 1
bar: {
buz: 3
---
foo: {
bar: 2
buz: 3
